--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -20,7 +20,7 @@
 <div class="container">
 
   {% if object_id %}
-  <form action = "{{ url_for('object') }}" method = "POST">
+  <form action = "{{ url_for('update', id=object_id.id) }}" method = "POST">
      <h3>Edit  object</h3>
 
      <div class="form-group">
