--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -14,17 +14,15 @@
 <div class="container breadcrumb-block">
   <ol class="breadcrumb">
     <li><a href="{{ url_for('root') }}">Home</a></li>
-    <li class="active"><a href="{{ url_for('about') }}">About</a></li>
   </ol>
 </div>
 
 <div class="container">
-  <h1>About us</h1>
-  <h2>Introduction</h2>
+  <h1>Sorry!</h1>
+  <h2>I think you are lost!</h2>
   <p class="lead">
-    This is a website created by Adrian Vazquez for the Napier University,
-    Edinburgh, Scotland. It is created with a Levinux server, python, bootstrap
-    (HTML+CSS+JavaScript) and SQLite3 database.
+    The url that you provide is not correct or maybe is broken. If you think that is the second case please <!DOCTYPE html>
+    not hesitate and <a href="{{ url_for('contact') }}">contact us</a>.
   </p>
 </div>
 {% endblock %}}
