--- a/src/templates/insert.html
+++ b/src/templates/insert.html
@@ -1,6 +1,16 @@
 {% extends "header.html" %}
 
 {% block content %}
+
+{% if session.logged %}
+<div class="container-full admin-panel">
+  <ol>
+    <li><a href="{{ url_for('insert') }}">Insert object</a></li>
+    <li><a href="{{ url_for('logout') }}">Logout</a></li>
+  </ol>
+</div>
+{% endif %}
+
 <div class="container breadcrumb-block">
   <ol class="breadcrumb">
     <li><a href="{{ url_for('root') }}">Home</a></li>
@@ -11,7 +21,6 @@
 
 <div class="container">
   <h1>The form to insert a new object</h1>
-  <h2>With a subtitle</h2>
 
   {% if msg %}
   <div class="alert alert-info">
@@ -20,50 +29,67 @@
   {% endif %}
 
   <form action = "{{ url_for('insert_value') }}" method = "POST">
-         <h3>New  object</h3>
 
-         <div class="form-group">
-           <label for="type">Type:</label>
-           <input type="text" name="type" class="form-control" placeholder="Planet, Star, Black hole.." /></br>
-         </div>
+    <div class="description">
+      <div class="form-group col-md-4">
+        <img src="../static/uploads/default.jpg" alt="default image" style="width:350px;height: 350px;">
+        <label for="image_url">Image url:</label>
+        <input type="text" name="image_url" class="form-control" placeholder="Path to the URL"  /></br>
+      </div>
 
-         <div class="form-group">
-           <label for="name">Name:</label>
-           <input type="text" name="name" class="form-control" placeholder="Earth, Mars, O12329.." /></br>
-         </div>
+      <div class="form-group col-md-8">
+        <label for="type">Type:</label>
+        <select type="text" name="type" class="form-control">
+          <option value="">Select a type</option>
+          <option value="SolarSystem">Solar System</option>
+          <option value="Planet">Planet</option>
+          <option value="Satellite">Satellite</option>
+          <option value="Asteroid">Asteroid</option>
+          <option value="Comet">Comet</option>
+          <option value="Star">Star</option>
+          <option value="Blackhole">Blackhole</option>
+          <option value="Constellation">Constellation</option>
+          <option value="Nebula">Nebula</option>
+          <option value="Starcluster">Starcluster</option>
+        </select>
+      </div>
 
-         <div class="form-group">
-           <label for="description">Description:</label>
-           <textarea class="form-control" rows="5" name="description" ></textarea>
-         </div>
+      <div class="form-group col-md-8">
+        <label for="name">Name:</label>
+        <input type="text" name="name" class="form-control" placeholder="Earth, Mars, O12329.."  /></br>
+      </div>
 
-         <div class="form-group">
-           <label for="size">Size:</label>
-           <input type="text" name="size" class="form-control" placeholder="KMs" /></br>
-         </div>
+      <div class="form-group col-md-8">
+        <label for="description">Description:</label>
+        <textarea class="form-control" rows="9" name="description"></textarea>
+      </div>
+    </div>
 
-         <div class="form-group">
-           <label for="mass">Mass:</label>
-           <input type="text" name="mass" class="form-control" placeholder="Compare to Earth - 1" /></br>
-         </div>
+    <div class="details">
+     <div class="form-group col-md-4">
+       <label for="size">Size:</label>
+       <input type="text" name="size" class="form-control" placeholder="KMs"  /></br>
+     </div>
 
-         <div class="form-group">
-           <label for="distance">Distance:</label>
-           <input type="text" name="distance" class="form-control" placeholder="Average distance from Earth" /></br>
-         </div>
+     <div class="form-group col-md-4">
+       <label for="mass">Mass:</label>
+       <input type="text" name="mass" class="form-control" placeholder="Compare to Earth - 1"  /></br>
+     </div>
 
-         <div class="form-group">
-           <label for="discoverer">Discoverer:</label>
-           <input type="text" name="discoverer" class="form-control" placeholder="Earth, Mars, O12329.." /></br>
-         </div>
+     <div class="form-group col-md-4">
+       <label for="distance">Distance:</label>
+       <input type="text" name="distance" class="form-control" placeholder="Average distance from Earth"  /></br>
+     </div>
 
-         <div class="form-group">
-           <label for="image_url">Image url:</label>
-           <input type="text" name="image_url" class="form-control" placeholder="Path to the URL" /></br>
-         </div>
+     <div class="form-group col-md-4">
+       <label for="discoverer">Discoverer:</label>
+       <input type="text" name="discoverer" class="form-control" placeholder="Galileo Galilei, Isaac Newton, Johannes Kepler..."  /></br>
+     </div>
 
-         <button type="submit" value="submit" class="btn btn-default">Submit</button>
-      </form>
+     <div class="form-group col-md-12">
+         <button type="submit" value="submit" class="btn btn-default">Insert</button>
+     </div>
+    </form>
 
 </div>
 
