--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -1,12 +1,21 @@
 {% extends "header.html" %}
 
 {% block content %}
+
+{% if session.logged %}
+<div class="container-full admin-panel">
+  <ol>
+    <li><a href="{{ url_for('insert') }}">Insert object</a></li>
+    <li><a href="{{ url_for('logout') }}">Logout</a></li>
+  </ol>
+</div>
+{% endif %}
+
 <div class="container breadcrumb-block">
   <ol class="breadcrumb">
     <li><a href="{{ url_for('root') }}">Home</a></li>
     <li><a href="{{ url_for('objects') }}">Objects</a></li>
-    <li class="active"><a href="{{ url_for('object') }}">Object</a></li>
-    <li class="active"><a href="{{ url_for('edit') }}">Edit</a></li>
+    <li class="active"><a href="{{ url_for('object', id=object_id.id) }}">Edit</a></li>
   </ol>
 </div>
 
@@ -21,50 +30,76 @@
 
   {% if object_id %}
   <form action = "{{ url_for('update', id=object_id.id) }}" method = "POST">
-     <h3>Edit  object</h3>
+      <div class="description">
+        <div class="form-group col-md-4">
+          <img src="{{ url_for('static', filename=object_id.image_url) }}" alt="{{ object_id.name }}" style="width:350px;height:350px;">
+          <label for="image_url">Image url:</label>
+          <input type="text" name="image_url" class="form-control" placeholder="Path to the URL" value="{{ object_id.image_url }}" /></br>
+        </div>
 
-     <div class="form-group">
-       <label for="type">Type:</label>
-       <input type="text" name="type" class="form-control" placeholder="Planet, Star, Black hole.." value="{{ object_id.type }}" /></br>
+
+        <div class="form-group col-md-8">
+          <label for="type">Type:</label>
+          <select type="text" name="type" class="form-control">
+            <option value="">Select a type</option>
+            <option value="SolarSystem">Solar System</option>
+            <option value="Planet">Planet</option>
+            <option value="Satellite">Satellite</option>
+            <option value="Asteroid">Asteroid</option>
+            <option value="Comet">Comet</option>
+            <option value="Star">Star</option>
+            <option value="Blackhole">Blackhole</option>
+            <option value="Constellation">Constellation</option>
+            <option value="Nebula">Nebula</option>
+            <option value="Starcluster">Starcluster</option>
+          </select>
+          <span>The actual type is: {{ object_id.type }}</span>
+        </div>
+
+        <div class="form-group col-md-8">
+          <label for="name">Name:</label>
+          <input type="text" name="name" class="form-control" placeholder="Earth, Mars, O12329.." value="{{ object_id.name }}" /></br>
+        </div>
+
+        <div class="form-group col-md-8">
+          <label for="description">Description:</label>
+          <textarea class="form-control" rows="9" name="description">{{ object_id.description }}</textarea>
+        </div>
+      </div>
+
+      <div class="details">
+       <div class="form-group col-md-4">
+         <label for="size">Size:</label>
+         <input type="text" name="size" class="form-control" placeholder="KMs" value="{{ object_id.size }}" /></br>
+       </div>
+
+       <div class="form-group col-md-4">
+         <label for="mass">Mass:</label>
+         <input type="text" name="mass" class="form-control" placeholder="Compare to Earth - 1" value="{{ object_id.mass }}" /></br>
+       </div>
+
+       <div class="form-group col-md-4">
+         <label for="distance">Distance:</label>
+         <input type="text" name="distance" class="form-control" placeholder="Average distance from Earth" value="{{ object_id.distance }}" /></br>
+       </div>
+
+       <div class="form-group col-md-4">
+         <label for="discoverer">Discoverer:</label>
+         <input type="text" name="discoverer" class="form-control" placeholder="Earth, Mars, O12329.." value="{{ object_id.discoverer }}" /></br>
+       </div>
+
+     <div class="knobs col-md-12">
+       <button type="submit" value="submit" class="btn btn-warning">Update</button>
      </div>
 
-     <div class="form-group">
-       <label for="name">Name:</label>
-       <input type="text" name="name" class="form-control" placeholder="Earth, Mars, O12329.." value="{{ object_id.name }}" /></br>
      </div>
-
-     <div class="form-group">
-       <label for="description">Description:</label>
-       <textarea class="form-control" rows="5" name="description">{{ object_id.description }}</textarea>
-     </div>
-
-     <div class="form-group">
-       <label for="size">Size:</label>
-       <input type="text" name="size" class="form-control" placeholder="KMs" value="{{ object_id.size }}" /></br>
-     </div>
-
-     <div class="form-group">
-       <label for="mass">Mass:</label>
-       <input type="text" name="mass" class="form-control" placeholder="Compare to Earth - 1" value="{{ object_id.mass }}" /></br>
-     </div>
-
-     <div class="form-group">
-       <label for="distance">Distance:</label>
-       <input type="text" name="distance" class="form-control" placeholder="Average distance from Earth" value="{{ object_id.distance }}" /></br>
-     </div>
-
-     <div class="form-group">
-       <label for="discoverer">Discoverer:</label>
-       <input type="text" name="discoverer" class="form-control" placeholder="Earth, Mars, O12329.." value="{{ object_id.discoverer }}" /></br>
-     </div>
-
-     <div class="form-group">
-       <label for="image_url">Image url:</label>
-       <input type="text" name="image_url" class="form-control" placeholder="Path to the URL" value="{{ object_id.image_url }}" /></br>
-     </div>
-
-     <button type="submit" value="submit" class="btn btn-default">Submit</button>
   </form>
+
+  <form action="{{ url_for('delete', id=object_id.id) }}" method = "post">
+    <button type="submit" class="btn btn-danger">Delete this object</button>
+  </form>
+
+
   {% endif %}
 </div> <!-- /container -->
 {% else %}
