--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -44,6 +44,16 @@
   </nav>
 
   {% block content %} {% endblock %}
+  
+  <div class="container">
+    <footer>
+      <div class="row">
+          <div class="col-lg-12">
+              <p>Copyright &copy; Milky Way Astronomical Objects (MWAO) 2016</p>
+          </div>
+      </div>
+    </footer>
+  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="{{ url_for('static', filename='js/bootstrap.min.js')  }}"></script>
