--- a/src/templates/objects.html
+++ b/src/templates/objects.html
@@ -1,6 +1,16 @@
 {% extends "header.html" %}
 
 {% block content %}
+
+{% if session.logged %}
+<div class="container-full admin-panel">
+  <ol>
+    <li><a href="{{ url_for('insert') }}">Insert object</a></li>
+    <li><a href="{{ url_for('logout') }}">Logout</a></li>
+  </ol>
+</div>
+{% endif %}
+
 <div class="container breadcrumb-block">
   <ol class="breadcrumb">
     <li><a href="{{ url_for('root') }}">Home</a></li>
@@ -10,25 +20,31 @@
 
 <div class="container">
   <h1>Here is the list with all the objects by type</h1>
-  <h2>With a subtitle</h2>
 
-  <p>
-    Insert a new value <a href="{{ url_for('insert') }}">here</a>
-  </p>
+  <div class="list-group">
+    <a href="{{ url_for('objects') }}" class="list-group-item">All</a>
+    <a href="{{ url_for('category', category='SolarSystem') }}" class="list-group-item">Solar systems</a>
+    <a href="{{ url_for('category', category='Planet') }}" class="list-group-item">Planets</a>
+    <a href="{{ url_for('category', category='Satellite') }}" class="list-group-item">Satellites</a>
+    <a href="{{ url_for('category', category='Asteroid') }}" class="list-group-item">Asteroids</a>
+    <a href="{{ url_for('category', category='Comet') }}" class="list-group-item">Comets</a>
+    <a href="{{ url_for('category', category='Star') }}" class="list-group-item">Stars</a>
+    <a href="{{ url_for('category', category='Blackhole') }}" class="list-group-item">Black holes</a>
+    <a href="{{ url_for('category', category='Constellation') }}" class="list-group-item">Constellations</a>
+    <a href="{{ url_for('category', category='Nebula') }}" class="list-group-item">Nebulas</a>
+    <a href="{{ url_for('category', category='Starcluster') }}" class="list-group-item">Star clusters</a>
+  </div>
 
   {% if objects %}
   <table class="table table-striped">
       <thead>
         <tr>
-          <th>Id</th>
           <th>Type</th>
           <th>Name</th>
-          <th>Description</th>
           <th>Size</th>
           <th>Mass</th>
           <th>distance</th>
           <th>Discoverer</th>
-          <th>Image</th>
         </tr>
       </thead>
       <tbody>
@@ -36,15 +52,12 @@
     {% for object in objects %}
 
         <tr class="object" onclick="window.document.location='{{ url_for('object', id=object.id) }}';">
-          <td>{{ object.id }}</td>
           <td>{{ object.type }}</td>
           <td>{{ object.name }}</td>
-          <td>{{ object.description }}</td>
           <td>{{ object.size }}</td>
           <td>{{ object.mass }}</td>
           <td>{{ object.distance }}</td>
           <td>{{ object.discoverer }}</td>
-          <td><img src="{{ url_for('static', filename=object.image_url) }}" alt="{{ object.name }}" style="width:150px;height:150px;"></td>
         </tr>
 
     {% endfor %}
@@ -53,7 +66,7 @@
 
   {% else %}
 
-    <p>No objects found.</p>
+    <p class="no-object">No objects found.</p>
 
   {% endif %}
 </div>
